unpackaged/main/default/objects/SAT__c/SAT__c.object-meta.xml
<CustomObject>
    <label>SAT</label>
    <nameField>
        <label>SAT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SATs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>