unpackaged/main/default/objects/SAT__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SATs</relationshipLabel>
    <relationshipName>SATs2</relationshipName>
    <type>Lookup</type>
</CustomField>