unpackaged/main/default/objects/SAT__c/fields/Additional_Days_With_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Days_With_Due_Date__c</fullName>
    <inlineHelpText>By default system will automatically calculate the SAT due date as 30 days. If the number of days differ for this customer, please enter it here. This will be used for due date calculation for the first SAT that is submitted.</inlineHelpText>
    <label>Number Of Days For Due Date Calculation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>