unpackaged/main/default/objects/SAT__c/fields/Check_PF_SAT_Owner_With_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Check_PF_SAT_Owner_With_Current_User__c</fullName>
    <formula>IF(PF_SAT_Owner__c = $User.Id,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged PF SAT Owner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>