unpackaged/main/default/objects/SAT__c/fields/Consumed_Days__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Days__c</fullName>
    <formula>SAT_Rejection_Date__c - SAT_Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumed Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>