unpackaged/main/default/objects/SAT__c/fields/copy_comment__c.field-meta.xml
<CustomField>
    <fullName>copy_comment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>copy comment</label>
    <type>Checkbox</type>
</CustomField>