unpackaged/main/default/objects/SAT__c/fields/Customer_Acceptance_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acceptance_Status__c</fullName>
    <inlineHelpText>Approved = No concerns or comments remain open for resolution.


Rejected = Known concerns do not meet the contractual requirements for contract services. Requires rework and possible re-submission of SAT validation report.</inlineHelpText>
    <label>Customer Acceptance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>