unpackaged/main/default/objects/SAT__c/fields/Customer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comments__c</fullName>
    <inlineHelpText>This field is required if you are Rejecting the SAT. Please concisely explain what issues or concerns you have with the SAT submitted here. If you have a question regarding the SAT please contact the Implementation Engineer via Chatter.</inlineHelpText>
    <label>Customer Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>