unpackaged/main/default/objects/SAT__c/fields/Customer_Contact_For_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_For_Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact For Onboarding</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SATs</relationshipLabel>
    <relationshipName>SATs1</relationshipName>
    <type>Lookup</type>
</CustomField>