unpackaged/main/default/objects/SAT__c/fields/Customer_User__c.field-meta.xml
<CustomField>
    <fullName>Customer_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SATs3</relationshipName>
    <type>Lookup</type>
</CustomField>