unpackaged/main/default/objects/SAT__c/fields/Logged_Customer_User__c.field-meta.xml
<CustomField>
    <fullName>Logged_Customer_User__c</fullName>
    <formula>IF(Customer_User__c =  $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged Customer User</label>
    <type>Checkbox</type>
</CustomField>