unpackaged/main/default/objects/SAT__c/fields/Number_Of_Days_Left__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Days_Left__c</fullName>
    <label>Number Of Days Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>