unpackaged/main/default/objects/SAT__c/fields/Number_Of_Days_Used_By_PF__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Days_Used_By_PF__c</fullName>
    <description>Total number of days used by PF (for review and remediation)</description>
    <label>Number Of Days Used By PF</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>