unpackaged/main/default/objects/SAT__c/fields/Pending_Days_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Pending_Days_for_Approval__c</fullName>
    <formula>TODAY() -  SAT_Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Days for Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>