unpackaged/main/default/objects/SAT__c/fields/PF_External_Comments__c.field-meta.xml
<CustomField>
    <fullName>PF_External_Comments__c</fullName>
    <label>PF External Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>