unpackaged/main/default/objects/SAT__c/fields/PF_Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>PF_Internal_Comments__c</fullName>
    <label>PF Internal Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>