unpackaged/main/default/objects/SAT__c/fields/PF_SAT_Owner__c.field-meta.xml
<CustomField>
    <fullName>PF_SAT_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SATs2</relationshipName>
    <type>Lookup</type>
</CustomField>