unpackaged/main/default/objects/SAT__c/fields/SAT_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>SAT_Acceptance_Date__c</fullName>
    <label>SAT Acceptance Date</label>
    <type>Date</type>
</CustomField>