unpackaged/main/default/objects/SAT__c/fields/SAT_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>SAT_Approval_Status__c</fullName>
    <inlineHelpText>Approved-no concerns or comments remain open for resolution</inlineHelpText>
    <label>SAT Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>