unpackaged/main/default/objects/SAT__c/fields/SAT_Auto_Approved__c.field-meta.xml
<CustomField>
    <fullName>SAT_Auto_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAT Auto Approved</label>
    <type>Checkbox</type>
</CustomField>