unpackaged/main/default/objects/SAT__c/fields/SAT_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>SAT_Closed_Date__c</fullName>
    <label>SAT Closed Date</label>
    <type>Date</type>
</CustomField>