unpackaged/main/default/objects/SAT__c/fields/SAT_On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>SAT_On_Hold_Date__c</fullName>
    <label>SAT On Hold Date</label>
    <type>Date</type>
</CustomField>