unpackaged/main/default/objects/SAT__c/fields/SAT_Pending_Date__c.field-meta.xml
<CustomField>
    <fullName>SAT_Pending_Date__c</fullName>
    <label>SAT Pending Date</label>
    <type>Date</type>
</CustomField>