unpackaged/main/default/objects/SAT__c/fields/SAT_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>SAT_Rejection_Date__c</fullName>
    <label>SAT Rejection Date</label>
    <type>Date</type>
</CustomField>