unpackaged/main/default/objects/SAT__c/fields/SAT_Status__c.field-meta.xml
<CustomField>
    <fullName>SAT_Status__c</fullName>
    <label>SAT Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drafting</fullName>
            </value>
            <value>
                <fullName>Submitted - Pending Customer Review</fullName>
            </value>
            <value>
                <fullName>Remediation Required</fullName>
            </value>
            <value>
                <fullName>Remediation in Progress</fullName>
            </value>
            <value>
                <fullName>Remediation in Progress - Partial</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>