unpackaged/main/default/objects/SAT__c/fields/SAT_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>SAT_Submission_Date__c</fullName>
    <label>SAT Submission Date</label>
    <type>Date</type>
</CustomField>