unpackaged/main/default/objects/SAT__c/fields/SAT_Submitter__c.field-meta.xml
<CustomField>
    <fullName>SAT_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAT Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SATs1</relationshipName>
    <type>Lookup</type>
</CustomField>