unpackaged/main/default/objects/SAT__c/fields/SAT_Type__c.field-meta.xml
<CustomField>
    <fullName>SAT_Type__c</fullName>
    <label>SAT Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pro SAT</fullName>
            </value>
            <value>
                <fullName>Regular SAT</fullName>
            </value>
            <value>
                <fullName>Deployment Validation Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>