unpackaged/main/default/objects/SAT__c/fields/skipValidation__c.field-meta.xml
<CustomField>
    <fullName>skipValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>skipValidation</label>
    <type>Checkbox</type>
</CustomField>