unpackaged/main/default/objects/SAT__c/fields/Submitted_To__c.field-meta.xml
<CustomField>
    <fullName>Submitted_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SATs (Submitted To)</relationshipLabel>
    <relationshipName>SATs</relationshipName>
    <type>Lookup</type>
</CustomField>