unpackaged/main/default/objects/SAT__c/fields/Technical_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Technical_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SATs4</relationshipName>
    <type>Lookup</type>
</CustomField>