unpackaged/main/default/objects/SAT__c/recordTypes/After_Submission.recordType-meta.xml
<RecordType>
    <fullName>After_Submission</fullName>
    <active>true</active>
    <label>After Submission</label>
</RecordType>