unpackaged/main/default/objects/SAT__c/recordTypes/Deployment_Validation_Report.recordType-meta.xml
<RecordType>
    <fullName>Deployment_Validation_Report</fullName>
    <active>true</active>
    <description>This record type will be used for the new SAT Type (SAT Light / Deployment Validation Report)</description>
    <label>Deployment Validation Report</label>
</RecordType>