unpackaged/main/default/objects/SAT__c/recordTypes/For_Submission.recordType-meta.xml
<RecordType>
    <fullName>For_Submission</fullName>
    <active>true</active>
    <label>For Submission</label>
</RecordType>